--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "online-shop",
   "version": "1.0.0",
-  "description": "",
+  "description": "Online Shop like digikala",
   "main": "app.js",
   "scripts": {
-    "test": "nodemon app"
+    "dev": "nodemon app"
   },
-  "author": "",
+  "author": "Behzad Koulivand",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.2"
+    "nodemon": "^3.0.1"
   }
 }
