--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
 PORT = 3000
-MONGO_URI = mongodb://localhost:27017/webblog_db
+MONGO_URI = mongodb://localhost:27017/onlineShop_db
 JWT_SECRET = jhsjhbsbsjhshvsuusg
